k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: dev
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: binay8025/petclinic:Petclinic
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8070

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"

    - name: sidecar-log-helper
        image: alpine:3.7
        command: ["sh", "-c", "tail -f /var/log/app/access.log"]
        volumeMounts:
        - name: shared-logs
          mountPath: /var/log/app
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
