k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: dev
  labels:
    app: petclinic-pet
spec:
  type: ClusterIP
  selector:
    app: petclinic-pet
  ports:
  - name : metrics
    port: 80
    targetPort: 8080
